--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Stories
 
 # Short bio or description (displayed in the header)
-description: A story programming language in development by Bryan Otero, Javier and Zul
+description: A story programming language in development by Bryan Otero, Javier and Zull
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: "https://raw.githubusercontent.com/barryclark/jekyllnow/master/images/1_rIkmavUeqyRySwlQdA9kKg.jpeg"
