--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Stories
 description: A story programming language in development by Bryan Otero, Javier and Zulll
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.hola.com%2Festar-bien%2Fgaleria%2F20200831174373%2Frazas-de-perro-mas-populares-pug-carlino%2F1%2F&psig=AOvVaw3l_qMBKdAIarKgNO-qb8P8&ust=1620970451672000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCOj0vtH3xfACFQAAAAAdAAAAABAJ
+avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/404.png
 
 #
 # Flags below are optional
