--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Stories
 description: A story programming language in development by Bryan Otero, Javier and Zulll
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/404.png
+avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/404.jpg
 
 #
 # Flags below are optional
