--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Stories
 
 # Short bio or description (displayed in the header)
-description: A story programming language in development by Bryan Otero, Javier and Zulll
+description: A story programming language in development by Bryan Otero, Javier and Zull
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/404.jpg
+avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/404.png
 
 #
 # Flags below are optional
