--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Stories
 
 # Short bio or description (displayed in the header)
-description: A story programming language in development by Bryan Otero, Javier and Zull
+description: A story programming language in development by Bryan Otero, Javier and Zul
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/404.png
+avatar: https://s3.amazonaws.com/cdn-origin-etr.akc.org/wp-content/uploads/2017/11/22130127/Pug-puppy-standing-in-profile-on-a-white-background.jpg
 
 #
 # Flags below are optional
