--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ name: Stories
 description: A story programming language in development by Bryan Otero, Javier and Zul
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://s3.amazonaws.com/cdn-origin-etr.akc.org/wp-content/uploads/2017/11/22130127/Pug-puppy-standing-in-profile-on-a-white-background.jpg
-
+avatar: https://upload.wikimedia.org/wikipedia/commons/thumb/3/39/Book.svg/1200px-Book.svg.png
 #
 # Flags below are optional
 #
