--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Stories
+name: ""Stories""
 
 # Short bio or description (displayed in the header)
 description: A story programming language in development by Bryan Otero, Javier and Zul
